# llama-train

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  train.py  trainer.ipynb
.devcontainer/: devcontainer.json
