[tool.poetry]
name = "llama-train"
version = "0.1.0"
description = "llama trainer project"
authors = ["jaeho kang <greennuri@gmail.com>"]
license = "apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
torch = { version = "2.0.1", source="torch"}
llama-recipes = {version ="^0.0.1", source="torch"}
transformers = "^4.34.0"
datasets = "^2.14.5"
accelerate = "^0.23.0"
sentencepiece = "^0.1.99"
protobuf = "3.20"
py7zr = "^0.20.6"
scipy = "^1.11.3"
peft = "^0.5.0"
bitsandbytes = "^0.41.1"
fire = "^0.5.0"
torch-tb-profiler = "^0.4.3"
ipywidgets = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
secondary = true

